--- a/research/1_data_ingestion.ipynb
+++ b/research/1_data_ingestion.ipynb
@@ -127,11 +127,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    " class DataIngestion:\n",
+    "class DataIngestion:\n",
     "    def __init__(self, config: DataIngestionConfig):\n",
     "        self.config = config\n",
     "\n",
@@ -143,7 +143,19 @@
     "            )\n",
     "            logger.info(f\"{filename} downloaded with following info: \\n{headers}\")\n",
     "        else:\n",
-    "            logger.info(f\"File already exists of size: {get_size(Path(self.config.local_data_file))}\")"
+    "            logger.info(f\"File already exists of size: {get_size(Path(self.config.local_data_file))}\")\n",
+    "    \n",
+    "    def extract_zip_file(self):\n",
+    "        \"\"\"\n",
+    "        zip_file_path: str\n",
+    "        Extracts the zip file into data directory\n",
+    "        Function returns None\n",
+    "        \"\"\"\n",
+    "        unzip_path = self.config.unzip_dir\n",
+    "        os.makedirs(unzip_path, exist_ok=True)\n",
+    "        with zipfile.ZipFile(self.config.local_data_file, 'r') as zip_ref:\n",
+    "            zip_ref.extractall(unzip_path)\n",
+    "    "
    ]
   },
   {
