Perform data ingestion

--- a/research/1_data_ingestion.ipynb
+++ b/research/1_data_ingestion.ipynb
@@ -80,29 +80,31 @@
    "source": [
     "class ConfigurationManager:\n",
     "    def __init__(\n",
-    "            self,\n",
-    "            config_filepath = CONFIG_FILE_PATH,\n",
-    "            params_filepath = PARAMS_FILE_PATH\n",
-    "            ):\n",
+    "        self,\n",
+    "        config_filepath = CONFIG_FILE_PATH,\n",
+    "        params_filepath = PARAMS_FILE_PATH):\n",
+    "        print(config_filepath)\n",
+    "        print(params_filepath)\n",
+    "        self.config = read_yaml(config_filepath)\n",
+    "        self.params = read_yaml(params_filepath)\n",
     "\n",
-    "            self.config = read_yaml(config_filepath)\n",
-    "            self.params = read_yaml(params_filepath)\n",
+    "        create_directories([self.config.artifacts_root])\n",
     "\n",
-    "            create_directories([self.config.artifacts_root])\n",
+    "    \n",
     "\n",
     "    def get_data_ingestion_config(self) -> DataIngestionConfig:\n",
     "        config = self.config.data_ingestion\n",
     "\n",
     "        create_directories([config.root_dir])\n",
-    "          \n",
+    "\n",
     "        data_ingestion_config = DataIngestionConfig(\n",
-    "                root_dir=config.root_dir,\n",
-    "                source_URL=config.source_URL,\n",
-    "                local_data_file=config.local_data_file,\n",
-    "                unzip_dir=config.unzip_dir\n",
+    "            root_dir=config.root_dir,\n",
+    "            source_URL=config.source_URL,\n",
+    "            local_data_file=config.local_data_file,\n",
+    "            unzip_dir=config.unzip_dir \n",
     "        )\n",
-    "          \n",
-    "        return data_ingestion_config\n"
+    "\n",
+    "        return data_ingestion_config"
    ]
   },
   {
@@ -122,12 +124,12 @@
     "import urllib.request as request\n",
     "import zipfile\n",
     "from textSummarizer.logging import logger\n",
-    "from textSummarizer.utils.common import get_size "
+    "from textSummarizer.utils.common import get_size"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -135,20 +137,24 @@
     "    def __init__(self, config: DataIngestionConfig):\n",
     "        self.config = config\n",
     "\n",
+    "\n",
+    "    \n",
     "    def download_file(self):\n",
     "        if not os.path.exists(self.config.local_data_file):\n",
     "            filename, headers = request.urlretrieve(\n",
     "                url = self.config.source_URL,\n",
-    "                filename = slef.config.local_file_data\n",
+    "                filename = self.config.local_data_file\n",
     "            )\n",
-    "            logger.info(f\"{filename} downloaded with following info: \\n{headers}\")\n",
+    "            logger.info(f\"{filename} download! with following info: \\n{headers}\")\n",
     "        else:\n",
-    "            logger.info(f\"File already exists of size: {get_size(Path(self.config.local_data_file))}\")\n",
+    "            logger.info(f\"File already exists of size: {get_size(Path(self.config.local_data_file))}\")  \n",
+    "\n",
+    "        \n",
     "    \n",
     "    def extract_zip_file(self):\n",
     "        \"\"\"\n",
     "        zip_file_path: str\n",
-    "        Extracts the zip file into data directory\n",
+    "        Extracts the zip file into the data directory\n",
     "        Function returns None\n",
     "        \"\"\"\n",
     "        unzip_path = self.config.unzip_dir\n",
@@ -161,6 +167,45 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "Update pipeline\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/home/g-o-t-w/Divine-Space/GraduVation/Projects/text-summarizer/config/config.yaml\n",
+      "/home/g-o-t-w/Divine-Space/GraduVation/Projects/text-summarizer/params.yaml\n",
+      "[2024-09-13 07:54:42,872: INFO: common: yaml file: /home/g-o-t-w/Divine-Space/GraduVation/Projects/text-summarizer/config/config.yaml loaded successfully]\n",
+      "[2024-09-13 07:54:42,874: INFO: common: yaml file: /home/g-o-t-w/Divine-Space/GraduVation/Projects/text-summarizer/params.yaml loaded successfully]\n",
+      "[2024-09-13 07:54:42,878: INFO: common: created directory at: artifacts]\n",
+      "[2024-09-13 07:54:42,880: INFO: common: created directory at: artifacts/data_ingestion]\n",
+      "[2024-09-13 07:54:42,882: INFO: 3300122297: File already exists of size: ~ 7718 KB]\n"
+     ]
+    }
+   ],
+   "source": [
+    "try:\n",
+    "    config = ConfigurationManager()\n",
+    "    data_ingestion_config = config.get_data_ingestion_config()\n",
+    "    data_ingestion = DataIngestion(config=data_ingestion_config)\n",
+    "    data_ingestion.download_file()\n",
+    "    data_ingestion.extract_zip_file()\n",
+    "except Exception as e:\n",
+    "    raise e"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
